Add preview feature